2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-01-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* multiplexer.test: More boilerplate simplified via use of test support.

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* multiplexer.test: Hooked into the new common test support code.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2004-02-10  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* multiplexer.man: This package is can be used with Tcl
	* pkgIndex.tcl:    8.2. Documented as such.

	* multiplexer.test: One test uses the 8.3'ism 'file
	  channels'. Added constraint and skipping it when under Tcl
	  8.2. Changed initialization code to ensure that the local
	  multiplexer package is loaded, and not an installed one.

2003-05-20  Andreas Kupries  <andreask@activestate.com>

	* multiplexer.man: Cleaned up the documentation of the three hooks
	  which can be set per multiplexer instance (access, data, exit).

	* multiplexer.tcl: Made sendtoorigin a true boolean flag, instead
	  of just 0/1.

2003-05-19  David N. Welton  <davidw@dedasys.com>

	* multiplexer.tcl (NewClient): Added access denied debug message
	for accessfilter.

	* multiplexer.man: Minor cleanups.

	* multiplexer.test: Added several tests.

	* multiplexer.tcl: Adding updated multiplexer to tcllib.  It is