@@ -1,3 +1,8 @@
+2006-10-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* multiplexer.test: Accept anything matching 127.*.*.* as
+	  ip-address for localhost.
+
 2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
